--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -1,4 +1,5 @@
 \documentclass[
+  draft,
 	fontsize=11pt,
 	a4paper,
 	twoside,
@@ -23,16 +24,17 @@
 
 \begin{document}
 
-	\include{titel}
-	\include{abstract}
-	\include{contents}
+%% \include{test}
+\include{titel}
+\include{abstract}
+\include{contents}
 
-	\include{einleitung}
-	\include{theory}
-	\include{potentials}
-	\include{results}
+\include{einleitung}
+\include{theory}
+\include{potentials}
+\include{results}
 
-	\include{bibliography}
-	\include{appendix}
+\include{bibliography}
+\include{appendix}
 
 \end{document}
