--- a/parsivald.tex
+++ b/parsivald.tex
@@ -28,7 +28,7 @@ Für alle weiteren Prozesse wurden folgende Annahmen getroffen:
 \end{enumerate}
 
 Reaktionen in der Gasphase sind also ebenso wenig darstellbar wie diffusionsgestützte Prozesse.
-Ohne diese notwendigen Annahmen käme das Parsival-Modell einer reinen Molekulardynamik-Simulation gleich.
+Ohne diese notwendigen Annahmen käme das Parsival-Modell einer reinen Molekular\-dynamik-Simu\-lation gleich.
 Stattdessen werden Reaktionen auf folgende Weise modelliert:
 
 Auf der Oberfläche des gesamten Simulationsraumes wird zuerst nach einem Ort für eine Precursorreaktion gesucht.
