--- a/settings.tex
+++ b/settings.tex
@@ -40,7 +40,7 @@
 \newcommand{\mergedcell}[2][l]{\begin{tabular}[#1]{@{}l@{}}#2\end{tabular}}
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\ccross}{\ding{55}}
-\newcommand{\angled}[1]{\rotatebox{25}{#1}}
+\newcommand{\angled}[1]{\rotatebox{70}{#1}}
 
 \definecolor{Green}{rgb}{0.7 1.0 0.7}
 \definecolor{Yellow}{rgb}{1.0 1.0 0.7}
@@ -53,3 +53,10 @@
 \newcommand{\cG}[1]{\multicolumn{1}{G}{#1}}
 \newcommand{\cY}[1]{\multicolumn{1}{y}{#1}}
 \newcommand{\cR}[1]{\multicolumn{1}{R}{#1}}
+
+\algnewcommand\algorithmicinput{\textbf{Input: }}
+\algnewcommand\Input{\item[\algorithmicinput]}
+\algnewcommand\algorithmicresult{\textbf{Result: }}
+\algnewcommand\Result{\item[\algorithmicresult]}
+\algnewcommand\algorithmicassumption{\textbf{Assumption: }}
+\algnewcommand\Assumption{\item[\algorithmicassumption]}
